force-app/main/default/objects/cpm__Payment_Schedule__c/cpm__Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>Object is used to schedule Payment Runs in the future</description>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Schedule Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>