force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Channel__c.field-meta.xml
<CustomField>
    <fullName>cpm__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buckaroo</fullName>
            </value>
            <value>
                <fullName>ProcessingHub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>