force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collection_Date__c</fullName>
    <description>Date when the payments should be collected by the bank. This is only used for direct debit methods with FinDock as processor (PaymentHub-BACS, PaymentHub-SEPA, etc.)</description>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>