force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Last_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Status_Reason__c</fullName>
    <description>Optional additional information added in Last Status Reason field if the payment schedule fails.</description>
    <label>Last Status Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>