force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>cpm__PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>