force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Prepare_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>cpm__Prepare_SOQL_Query__c</fullName>
    <label>Prepare SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>