force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Process_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>cpm__Process_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>This field is for payment schedules that are used to create payment refrences for pay slips. If your org has record creation limits for batch jobs, set the payment schedule limit here for installment generation job. If unsure, leave this field with the default value.</description>
    <label>Process Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>