force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Recurring_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cpm__Recurring_Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Payment Schedule</label>
    <referenceTo>cpm__Recurring_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>