force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Run_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Run_Date__c</fullName>
    <description>Date when payment schedule is run.</description>
    <inlineHelpText>¿Cuándo debe ejecutarse este pago?</inlineHelpText>
    <label>Run Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>