force-app/main/default/objects/cpm__Payment_Schedule__c/fields/cpm__Source__c.field-meta.xml
<CustomField>
    <fullName>cpm__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaymentHub</fullName>
            </value>
            <value>
                <fullName>PaymentHub-for-NPSP</fullName>
                <default>true</default>
                <label>PaymentHub-for-NPSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>