force-app/main/default/objects/cpm__Payment_Schedule__c/validationRules/paysepa__Sepa_needs_target.validationRule-meta.xml
<ValidationRule>
    <fullName>paysepa__Sepa_needs_target</fullName>
    <active>true</active>
    <description>Selecting SEPA as processor you also need to select a target</description>
    <errorConditionFormula>IF( AND( ISPICKVAL( cpm__Payment_Processor__c , &apos;PaymentHub-Sepa&apos;) ,  ISBLANK(TEXT( cpm__Target__c ) ) ) , true, false)</errorConditionFormula>
    <errorMessage>Target is mandatory for SEPA Payment Schedules</errorMessage>
</ValidationRule>